# migration

./: .gitignore  AUTHORS  BUILDING  ChangeLog  FILES  Makefile  Makefile.am  Makefile.comm  Makefile.comm.in  Makefile.in  Makefile.jade  Makefile.lib  Makefile.lib.in  Makefile.prog  Makefile.prog.in  Makefile.wat  NEWS  README  RELEASE  SP.dsw  SP.mak  TODO  acconfig.h  acinclude.m4  configure  configure.in  instmac.pl  jade-generate.mak  jade.mak  msggen.pl  msggen.pl.in  openjade-authors.txt  sp-generate.mak  spec.in
config/: configure.in
docsrc/: .cvsignore  Makefile  Makefile.am  onsgmls.xml  openjade.xml  osgmlnorm.xml  ospam.xml  ospent.xml  osx.xml  releasenotes.xml
dsssl/: FOT.tex  Makefile.am  Makefile.jadetex  builtins.dsl  catalog  demoMaster.tex  fot.dtd  jadetex.dtx  ps.fot  style-sheet.dtd
include/: ArcEngine.h  Attribute.h  CharMap.cxx  CharMap.h  CharsetDecl.h  CmdLineApp.h  ContentState.h  ContentToken.h  DescriptorManager.h  Dtd.h  ElementType.h  Entity.h  EntityApp.h  Event.h  ExtendEntityManager.h  ExternalId.h  Fixed4CodingSystem.h  ISet.h  InputSource.h  InternalInputSource.h  LinkProcess.h  Location.h  Lpd.h  Makefile.am  Markup.h  Message.h  MessageArg.h  MessageFormatter.h  MessageReporter.h  NamedTable.h  OpenElement.h  Options.cxx  Options.h  OutputByteStream.h  OutputCharStream.h  Owner.h  OwnerTable.h  ParserApp.h  ParserOptions.h  PointerTable.cxx  (+19 more)
jade/: .cvsignore  AUTHORS  ChangeLog  DssslApp.cxx  DssslApp.h  DssslAppMessages.h  DssslAppMessages.rc  FILES  HtmlFOTBuilder.cxx  HtmlFOTBuilder.h  HtmlFOTBuilder_inst.cxx  HtmlFOTBuilder_inst.m4  JadeMessages.h  JadeMessages.msg  JadeMessages.rc  Makefile  Makefile.am  Makefile.comm  Makefile.comm.in  Makefile.in  Makefile.lib  Makefile.lib.in  Makefile.prog  Makefile.prog.in  Makefile.sub  Makefile.wat  MifFOTBuilder.cxx  MifFOTBuilder.h  MifMessages.h  NEWS  README  README.configure  RELEASE  RtfFOTBuilder.cxx  RtfFOTBuilder.h  RtfFOTBuilder_inst.cxx  RtfFOTBuilder_inst.m4  RtfMessages.h  RtfMessages.rc  SP.mak  (+24 more)
jade/config/: aclocal.m4  configure.in
jade/contrib/: README  psgml-dsssl.el  psgml-jade.el
jade/debian/: README.opensp-dev  changelog  control  openjade.doc-base  prerm.opensp  rules
jade/develdoc/: TODO  jadedoc.sgml  missing
jade/doc/: archform.htm  build.htm  catalog.htm  charset.htm  generic.htm  index.htm  new.htm  nsgmls.htm  onsgmls.xml  openjade.1  sgmldecl.htm  sgmlsout.htm  spam.htm  sx.htm  sysdecl.htm  sysid.htm  xml.htm
jade/docsrc/: .cvsignore  Makefile  onsgmls.xml  openjade.xml  osgmlnorm.xml  ospam.xml  ospent.xml  osx.xml  releasenotes.xml
jade/dsssl/: .cvsignore  Makefile.am  builtins.dsl  fot.dtd  jadetex.dtx  style-sheet.dtd
jade/grove/: .cvsignore  LocNode.cxx  Makefile.am  Makefile.sub  Node.cxx  Node.h  grove.dsp
jade/groveoa/: CGroveBuilder.cxx  GroveNode.cxx  WinApp.cxx  WinApp.h
jade/include/: Attribute.h  CharMap.cxx  CharsetInfo.h  CmdLineApp.h  CodingSystem.h  Dtd.h  Entity.h  EntityCatalog.h  Event.h  ExtendEntityManager.h  Mode.h  ParserOptions.h  SOEntityCatalog.h  Sd.h  SgmlParser.h  Syntax.h  config.h  config.h.in
jade/jade/: .cvsignore  DssslApp.cxx  DssslApp.h  DssslAppMessages.msg  HtmlFOTBuilder.cxx  HtmlFOTBuilder.h  HtmlFOTBuilder_inst.cxx  HtmlMessages.h  Makefile.am  Makefile.sub  MifFOTBuilder.cxx  MifFOTBuilder.h  MifFOTBuilder_inst.m4  RtfFOTBuilder.cxx  RtfFOTBuilder.h  RtfFOTBuilder_inst.cxx  RtfFOTBuilder_inst.m4  RtfMessages.msg  RtfOle.cxx  SgmlFOTBuilder.cxx  TeXFOTBuilder.cxx  TeXFOTBuilder.h  TeXFOTBuilder_inst.cxx  TeXFOTBuilder_inst.m4  TextFOTBuilder.cxx  TextFOTBuilder.h  TransformFOTBuilder.cxx  TransformFOTBuilder.h  jade.cxx  jade.dsp  jade.rc  jade_version.h
jade/jadedist/: bin-files.txt  files.txt
jade/jadedoc/: Makefile.am  TeX.htm  autoconf.htm  dsssl2.htm  index.htm  jade.htm  mif.htm  openjade.xml  rtf.htm  tex.htm  xmlfo.htm
jade/lib/: Attribute.cxx  CharsetInfo.cxx  CmdLineApp.cxx  CmdLineAppMessages.msg  CmdLineAppMessages.rc  CodingSystemKit.cxx  ContentState.cxx  DtdDeclEventHandler.cxx  Entity.cxx  EntityApp.cxx  EntityCatalog.cxx  Event.cxx  ExtendEntityManager.cxx  GenericEventHandler.cxx  IdentityCodingSystem.cxx  Makefile.sub  MessageTable.cxx  Param.cxx  Parser.cxx  Parser.h  ParserApp.cxx  ParserMessages.cxx  ParserMessages.h  ParserMessages.msg  ParserMessages.rc  ParserState.cxx  ParserState.h  lib.dsp  (+20 more)
nsgmls/: Makefile  Makefile.am  Makefile.inc  Makefile.sub  NsgmlsMessages.h  NsgmlsMessages.msg  RastEventHandler.cxx  RastEventHandler.h  SgmlsEventHandler.cxx  SgmlsEventHandler.h  nsgmls.cxx  nsgmls.dsp
sp/: .cvsignore  AUTHORS  BUILDING  ChangeLog  Makefile.am  Makefile.comm.in  Makefile.in  Makefile.prog.in  NEWS  README  SP.dsw  TODO  acconfig.h  acinclude.m4  autoinit.sh  configure.in  msggen.pl  msggen.pl.in  sp-generate.mak  spec.in
spam/: CopyEventHandler.cxx  CopyEventHandler.h  Makefile  Makefile.am  Makefile.inc  SpamMessages.msg  spam.cxx  spam.dsp
spcat/: Makefile  Makefile.am  Makefile.inc  Makefile.sub  SpcatMessages.msg  spcat.cxx  spcat.dsp  spcat_inst.m4
spgrove/: GroveApp.cxx  GroveApp.h  GroveBuilder.cxx  GroveBuilder.h  Makefile.am  Makefile.sub  SdNode.h  grove_inst.cxx  grove_inst.m4  threads.h
style/: AlignedColumn.cxx  Anchor.cxx  Collector.h  ColumnSetSequence.cxx  DocumentGenerator.cxx  DssslApp.cxx  DssslApp.h  DssslAppMessages.h  DssslAppMessages.msg  DssslSpecEventHandler.cxx  DssslSpecEventHandler.h  ELObj.cxx  ELObj.h  ELObjPropVal.h  EmbeddedText.h  EmphasizingMark.h  Expression.cxx  FOTBuilder.cxx  FOTBuilder.h  FlowObj.cxx  FlowObj_inst.cxx  FlowObj_inst.m4  GroveManager.h  IncludedContainerArea.cxx  InheritedC.cxx  Insn.cxx  Insn.h  Insn2.h  Interpreter.cxx  Interpreter.h  InterpreterMessages.cxx  InterpreterMessages.h  InterpreterMessages.msg  InterpreterMessages.rc  Makefile.am  Makefile.sub  MultiLineInlineNote.cxx  NumberCache.cxx  PageModelObj.h  PageSequence.cxx  (+29 more)
sx/: Makefile  Makefile.am  Makefile.inc  Makefile.sub  XmlOutputEventHandler.cxx  XmlOutputEventHandler.h  XmlOutputMessages.h  XmlOutputMessages.msg  sx.cxx  sx.dsp
(+483 files in other folders)
