## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = check-news dist-zip

SUBDIRS = pubtext doc all \
          include generic \
          lib nsgmls spent spam sgmlnorm sx spcat 

## Note that we include the windows-only aux files.
EXTRA_DIST = config/config.sub config/ltconfig config/missing \
             config/config.guess config/install-sh config/ltmain.sh \
             config/mkinstalldirs instmac.pl msggen.pl \
             sunfix.sh SP.dsw SP.mak build-win32.bat sp-generate.mak
