## Process this file with automake to produce Makefile.in

pkgdata_DATA = builtins.dsl catalog style-sheet.dtd spec.dtd fot.dtd \
	extensions.dsl

docdir = $(prefix)/doc
pkgdocdir = $(docdir)/@PACKAGE@

pkgdoc_DATA = demo.dsl demo.sgm 

EXTRA_DIST = Makefile.jadetex builtins.dsl catalog demo.dsl demo.sgm \
 dsssl.dtd extensions.dsl fot.dtd jadetex.dtx jadetex.ini jadetex.ins \
 pdfjadetex.ini spec.dtd style-sheet.dtd unicode.sty
