## Process this file with automake to produce Makefile.in

pkgdata_DATA = builtins.dsl catalog style-sheet.dtd spec.dtd fot.dtd \
	extensions.dsl

docdir = $(prefix)/doc
pkgdocdir = $(docdir)/@PACKAGE@

pkgdoc_DATA = demo.dsl demo.sgm 

EXTRA_DIST = builtins.dsl catalog demo.dsl demo.sgm dsssl.dtd \
	extensions.dsl fot.dtd spec.dtd style-sheet.dtd unicode.sty
