pkginclude_HEADERS = Allocator.h ArcEngine.h Attribute.h Attributed.h \
	Big5CodingSystem.h Boolean.h CharMap.cxx CharMap.h CharsetDecl.h \
	CharsetInfo.h CharsetRegistry.h CmdLineApp.h CodingSystem.h \
	CodingSystemKit.h ConsoleOutput.h ContentState.h ContentToken.h \
	CopyOwner.cxx CopyOwner.h DescriptorManager.h Dtd.h \
	EUCJPCodingSystem.h ElementType.h Entity.h EntityApp.h \
	EntityCatalog.h EntityDecl.h EntityManager.h ErrnoMessageArg.h \
	ErrorCountEventHandler.h Event.h EventsWanted.h ExtendEntityManager.h \
	ExternalId.h Fixed2CodingSystem.h GenericEventHandler.h Hash.h \
	HashTable.cxx HashTable.h HashTableItemBase.cxx HashTableItemBase.h \
	IList.h IListBase.h IListIter.h IListIterBase.h IQueue.cxx IQueue.h \
	ISet.cxx ISet.h ISetIter.h IdentityCodingSystem.h InputSource.h \
	InternalInputSource.h Link.h LinkProcess.h List.cxx List.h ListIter.h \
	LiteralStorage.h Location.h Lpd.h Markup.h Message.h MessageArg.h \
	MessageBuilder.h MessageEventHandler.h MessageFormatter.h \
	MessageReporter.h MessageTable.h Mode.h NCVector.h Named.h \
	NamedResource.h NamedResourceTable.h NamedTable.h Notation.h \
	NotationStorage.h OpenElement.h Options.cxx Options.h \
	OutputByteStream.h OutputCharStream.h Owner.cxx Owner.h \
	OwnerTable.cxx OwnerTable.h ParserApp.h ParserOptions.h \
	PointerTable.cxx PointerTable.h PosixStorage.h Ptr.cxx Ptr.h \
	RangeMap.cxx RangeMap.h Resource.h RewindStorageObject.h \
	SJISCodingSystem.h SOEntityCatalog.h Sd.h SdText.h \
	SearchResultMessageArg.h SgmlParser.h ShortReferenceMap.h \
	StdioStorage.h StorageManager.h StringC.h StringOf.cxx StringOf.h \
	StringResource.h SubstTable.cxx SubstTable.h Syntax.h Text.h \
	TranslateCodingSystem.h TypeId.h URLStorage.h UTF8CodingSystem.h \
	UnicodeCodingSystem.h UnivCharsetDesc.h Vector.cxx Vector.h \
	Win32CodingSystem.h WinApp.h WinInetStorage.h XMLCodingSystem.h \
	XcharMap.cxx XcharMap.h config.h constant.h macros.h rtti.h \
	sptchar.h types.h xnew.h
